--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "gsap": "^3.6.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
+    "three": "^0.127.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
